--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,8 @@
     }
   },
   "plugins": [
-    "transform-runtime"
+    "transform-runtime",
+    "transform-object-rest-spread"
   ],
   "ignore": [
     "./node_modules/**/*.js"
