--- a/package.json
+++ b/package.json
@@ -4,20 +4,75 @@
   "description": "Auth0 Account Link Extension",
   "main": "index.js",
   "engines": {
-    "node": "8.2.1"
+    "node": "6.9.5"
   },
   "scripts": {
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "serve:dev": "gulp run"
+    "serve:dev": "gulp run",
+    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-account-link.extension.$npm_package_version.js ./build/bundle.js"
   },
   "author": "Auth0",
   "license": "MIT",
+  "auth0-extension": {
+    "externals": [
+      "auth0-extension-tools@1.2.1",
+      "auth0-extension-hapi-tools@1.2.0",
+      "boom@3.2.2",
+      "bluebird@3.4.6",
+      "compression@1.4.4",
+      "delegates@0.1.0",
+      "depd@1.0.1",
+      "destroy@1.0.3",
+      "ejs@2.3.1",
+      "express@4.12.4",
+      "express-jwt@3.1.0",
+      "iconv-lite@0.4.10",
+      "hapi@13.5.0",
+      "lodash@3.10.1",
+      "lru-cache@2.6.4",
+      "mime-db@1.10.0",
+      "moment@2.10.3",
+      "morgan@1.5.3",
+      "ms@0.7.1",
+      "nconf@0.8.4",
+      "open@0.0.5",
+      "qs@3.1.0",
+      "raw-body@2.1.0",
+      "read-all-stream@2.1.2",
+      "request@2.56.0",
+      "superagent@1.2.0",
+      "type-check@0.3.1",
+      "winston@1.0.0",
+      "xml2js@0.4.8",
+      "auth0@2.1.0",
+      "lru-memoizer@1.10.0",
+      "node-uuid@1.4.3",
+      "jade@1.10.0",
+      "jsonwebtoken@7.1.9",
+      "debug@2.2.0",
+      "body-parser@1.12.4",
+      "mime-types@2.0.12",
+      "webtask-tools"
+    ],
+    "settings": {}
+  },
   "dependencies": {
-    "auth0-extension-tools": "^1.2.1",
+    "auth0-extension-hapi-tools": "1.2.0",
+    "auth0-extension-tools": "1.2.1",
+    "boom": "3.2.2",
+    "hapi": "13.5.0",
+    "nconf": "^0.8.4",
+    "open": "^0.0.5",
+    "webtask-tools": "^3.2.0",
+    "winston": "1.0.0"
+  },
+  "devDependencies": {
+    "auth0-extensions-cli": "^1.0.5",
     "babel": "^6.23.0",
     "babel-core": "^6.25.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -25,24 +80,19 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-register": "^6.24.1",
     "babel-runtime": "^6.25.0",
-    "boom": "^5.2.0",
-    "eslint-plugin-import": "^2.7.0",
-    "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-util": "^3.0.8",
-    "hapi": "^16.5.0",
-    "nconf": "^0.8.4",
-    "ngrok": "^2.2.15",
-    "nodemon": "^1.11.0",
-    "open": "^0.0.5"
-  },
-  "devDependencies": {
     "chai": "^4.1.0",
+    "edge": "^7.10.1",
     "eslint": "^4.3.0",
     "eslint-config-auth0": "^11.0.0",
     "eslint-config-auth0-base": "^13.0.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
-    "mocha": "^3.5.0"
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-util": "^3.0.8",
+    "mocha": "^3.5.0",
+    "ngrok": "^2.2.15",
+    "nodemon": "^1.11.0"
   }
 }
