--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc --require babel-register --require babel-polyfill mocha test --recursive",
     "lint": "eslint .",
     "serve:dev": "gulp run",
     "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-account-link.extension.$npm_package_version.js ./build/bundle.js"
@@ -93,6 +93,7 @@
     "gulp-util": "^3.0.8",
     "mocha": "^3.5.0",
     "ngrok": "^2.2.15",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "nyc": "^11.1.0"
   }
 }
