Updating rule, rule generator, and adding tests
The rule is able to be stored as a function in a JS file and then be read in as
a string with some minor parsing and token replacement in order to have it ready
to go for installation. This allows us to edit the code with full syntax
highlighting and static analysis since it does not live in a template string.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "auth0-extension": {
     "externals": [
+      "auth0@2.6.0",
       "auth0-extension-tools@1.2.1",
       "auth0-extension-hapi-tools@1.2.0",
       "boom@3.2.2",
@@ -59,6 +60,7 @@
     "settings": {}
   },
   "dependencies": {
+    "auth0": "2.6.0",
     "auth0-extension-hapi-tools": "1.2.0",
     "auth0-extension-tools": "1.2.1",
     "boom": "3.2.2",
