Fixing circleci and ignores

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
+      - image: circleci/node:6.9.1
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -17,7 +17,7 @@ jobs:
     #working_directory: ~/repo
 
     steps:
-     configuration - checkout
+      - checkout
 
       # Download and cache dependencies
       - restore_cache:
