--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.1
+      - image: circleci/boron
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
