Split current template into rendereable modules

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "boom": "3.2.2",
     "hapi": "13.5.0",
     "inert": "4.0.1",
+    "micromustache": "^5.2.0",
     "nconf": "^0.8.4",
     "open": "^0.0.5",
     "request": "2.56.0",
