Start implementing admin site for Account Linking Extension

--- a/package.json
+++ b/package.json
@@ -67,12 +67,14 @@
     "auth0-extension-tools": "^1.2.1",
     "bluebird": "^3.5.1",
     "boom": "3.2.2",
+    "handlebars": "^4.0.11",
     "hapi": "13.5.0",
     "inert": "4.0.1",
     "micromustache": "^5.2.0",
     "nconf": "^0.8.4",
     "open": "^0.0.5",
     "request": "2.56.0",
+    "vision": "^4.1.1",
     "webtask-tools": "^3.2.0",
     "winston": "1.0.0"
   },
