--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
     "boom": "3.2.2",
     "handlebars": "^4.0.11",
     "hapi": "13.5.0",
+    "hapi-auth-jwt2": "^7.0.1",
     "inert": "4.0.1",
+    "jsonwebtoken": "^8.1.0",
+    "jwks-rsa": "^1.2.1",
     "micromustache": "^5.2.0",
     "nconf": "^0.8.4",
     "open": "^0.0.5",
