--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "hapi": "13.5.0",
     "hapi-auth-jwt2": "^7.0.1",
     "inert": "4.0.1",
+    "joi": "^13.0.1",
     "jsonwebtoken": "^8.1.0",
     "jwks-rsa": "^1.2.1",
+    "md5": "^2.2.1",
     "micromustache": "^5.2.0",
     "nconf": "^0.8.4",
     "open": "^0.0.5",
