Remove code coverage in integration tests

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "scripts": {
     "start": "node ./index.js",
-    "test": "nyc --require babel-register --require babel-polyfill mocha test --recursive",
-    "test:integration": "nyc --require babel-register --require babel-polyfill mocha integration --recursive --timeout 50000",
+    "test":
+      "nyc --require babel-register --require babel-polyfill mocha test --recursive",
+    "test:integration":
+      "mocha integration --compilers js:babel-core/register --recursive --timeout 50000",
     "lint": "eslint .",
     "serve:dev": "gulp run",
     "client:build": "minify --clean public/css/link.css",
