--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "auth0-account-link-extension",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "Auth0 Account Link Extension",
   "main": "index.js",
   "engines": {
-    "node": "7.1"
+    "node": "6.9"
   },
   "scripts": {
     "start": "node ./index.js",
@@ -20,7 +20,7 @@
   "license": "MIT",
   "auth0-extension": {
     "externals": [
-      "auth0@2.6.0",
+      "auth0@2.8.0",
       "auth0-extension-tools@1.2.1",
       "auth0-extension-hapi-tools@1.2.0",
       "boom@3.2.2",
@@ -34,6 +34,9 @@
       "express-jwt@3.1.0",
       "iconv-lite@0.4.10",
       "hapi@13.5.0",
+      "hapi-auth-jwt2@7.0.1",
+      "jwks-rsa@1.1.1",
+      "joi@9.0.4",
       "lodash@3.10.1",
       "lru-cache@2.6.4",
       "mime-db@1.10.0",
@@ -67,13 +70,12 @@
     "auth0-extension-hapi-tools": "1.2.0",
     "auth0-extension-tools": "^1.2.1",
     "boom": "3.2.2",
-    "handlebars": "^4.0.11",
     "hapi": "13.5.0",
-    "hapi-auth-jwt2": "^7.0.1",
+    "hapi-auth-jwt2": "7.0.1",
     "inert": "4.0.1",
     "joi": "9.0.4",
     "jsonwebtoken": "^8.1.0",
-    "jwks-rsa": "^1.2.1",
+    "jwks-rsa": "1.1.1",
     "nconf": "^0.8.4",
     "open": "^0.0.5",
     "request": "2.56.0",
