--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "start": "node ./index.js",
-    "test": "nyc --require babel-register --require babel-polyfill mocha test --recursive --timeout 5000",
-    "test:integration": "mocha integration --compilers js:babel-core/register --recursive --timeout 50000",
+    "test": "nyc mocha test --recursive --timeout 5000",
+    "test:integration": "mocha integration --recursive --timeout 50000",
     "lint": "eslint .",
     "serve:dev": "gulp run",
     "client:build": "minify --clean public/css/link.css && minify --clean public/css/admin.css",
@@ -41,19 +41,7 @@
   },
   "devDependencies": {
     "auth0-extensions-cli": "https://github.com/kusold/auth0-extensions-cli.git#ecma-8",
-    "babel": "^6.23.0",
-    "babel-core": "^6.25.0",
-    "babel-plugin-transform-es2015-parameters": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babel-runtime": "^6.25.0",
     "chai": "^4.1.0",
-    "edge": "^7.10.1",
     "eslint": "^4.3.0",
     "eslint-config-auth0": "^11.0.0",
     "eslint-config-auth0-base": "^13.0.0",
