--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jwks-rsa": "1.1.1",
     "nconf": "^0.8.4",
     "open": "^0.0.5",
-    "request": "2.56.0",
+    "request": "^2.85.0",
     "webtask-tools": "^3.2.0",
     "winston": "1.0.0"
   },
