--- a/package.json
+++ b/package.json
@@ -19,8 +19,53 @@
   "author": "Auth0",
   "license": "MIT",
   "auth0-extension": {
-    "nodeTarget": "8.9.0",
-    "bundleModules": false
+    "nodeTarget": "4.2.0",
+    "bundleModules": true,
+    "externals": [
+      "auth0-extension-hapi-tools@1.2.0",
+      "auth0-extension-tools@1.2.1",
+      "auth0@2.1.0",
+      "auth0@2.8.0",
+      "bluebird@3.5.0",
+      "body-parser@1.12.4",
+      "boom@3.2.2",
+      "compression@1.4.4",
+      "debug@2.2.0",
+      "delegates@0.1.0",
+      "depd@1.0.1",
+      "destroy@1.0.3",
+      "ejs@2.3.1",
+      "express-jwt@3.1.0",
+      "express@4.12.4",
+      "hapi-auth-jwt2@7.0.1",
+      "hapi@13.5.0",
+      "iconv-lite@0.4.10",
+      "jade@1.10.0",
+      "joi@9.0.4",
+      "jsonwebtoken@8.1.0",
+      "jwks-rsa@1.1.1",
+      "lodash@3.10.1",
+      "lru-cache@2.6.4",
+      "lru-memoizer@1.10.0",
+      "mime-db@1.10.0",
+      "mime-types@2.0.12",
+      "moment@2.10.3",
+      "morgan@1.5.3",
+      "ms@0.7.1",
+      "nconf@0.8.4",
+      "node-uuid@1.4.3",
+      "open@0.0.5",
+      "qs@3.1.0",
+      "raw-body@2.1.0",
+      "read-all-stream@2.1.2",
+      "request@2.85.0",
+      "superagent@1.2.0",
+      "type-check@0.3.1",
+      "webtask-tools",
+      "winston@1.0.0",
+      "xml2js@0.4.8"
+    ]
+
   },
   "dependencies": {
     "auth0": "^2.8.0",
