--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
       "winston@1.0.0",
       "xml2js@0.4.8"
     ]
-
   },
   "dependencies": {
     "auth0": "^2.8.0",
@@ -85,6 +84,7 @@
     "winston": "1.0.0"
   },
   "devDependencies": {
+    "@babel/runtime": "7.0.0-beta.46",
     "auth0-extensions-cli": "1.1.0",
     "chai": "^4.1.0",
     "eslint": "^4.3.0",
