--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
   },
   "scripts": {
     "start": "node ./index.js",
-    "test":
-      "nyc --require babel-register --require babel-polyfill mocha test --recursive --timeout 5000",
-    "test:integration":
-      "mocha integration --compilers js:babel-core/register --recursive --timeout 50000",
+    "test": "nyc --require babel-register --require babel-polyfill mocha test --recursive --timeout 5000",
+    "test:integration": "mocha integration --compilers js:babel-core/register --recursive --timeout 50000",
     "lint": "eslint .",
     "serve:dev": "gulp run",
     "client:build": "minify --clean public/css/link.css && minify --clean public/css/admin.css",
-    "extension:build":
-      "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-account-link.extension.$npm_package_version.js ./build/bundle.js",
+    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-account-link.extension.$npm_package_version.js ./build/bundle.js",
     "build": "yarn run client:build && yarn run extension:build"
   },
   "author": "Auth0",
@@ -24,8 +21,8 @@
   "auth0-extension": {
     "externals": [
       "auth0@2.8.0",
-      "auth0-extension-tools@1.2.1",
-      "auth0-extension-hapi-tools@1.2.0",
+      "auth0-extension-hapi-tools@1.2.2",
+      "auth0-extension-tools@1.3.1",
       "boom@3.2.2",
       "bluebird@3.5.0",
       "compression@1.4.4",
@@ -70,8 +67,8 @@
   },
   "dependencies": {
     "auth0": "^2.8.0",
-    "auth0-extension-hapi-tools": "1.2.0",
-    "auth0-extension-tools": "^1.2.1",
+    "auth0-extension-hapi-tools": "1.2.2",
+    "auth0-extension-tools": "1.3.1",
     "boom": "3.2.2",
     "hapi": "13.5.0",
     "hapi-auth-jwt2": "7.0.1",
