--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "nodeTarget": "4.2.0",
     "bundleModules": true,
     "externals": [
-      "auth0-extension-hapi-tools@1.2.0",
-      "auth0-extension-tools@1.2.1",
-      "auth0@2.1.0",
+      "auth0-extension-hapi-tools@1.2.2",
+      "auth0-extension-tools@1.3.1",
       "auth0@2.8.0",
       "bluebird@3.5.0",
       "body-parser@1.12.4",
@@ -68,8 +67,8 @@
   },
   "dependencies": {
     "auth0": "^2.8.0",
-    "auth0-extension-hapi-tools": "1.2.0",
-    "auth0-extension-tools": "^1.2.1",
+    "auth0-extension-hapi-tools": "1.2.2",
+    "auth0-extension-tools": "1.3.1",
     "boom": "3.2.2",
     "hapi": "13.5.0",
     "hapi-auth-jwt2": "7.0.1",
