--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
       "auth0@2.8.0",
       "bluebird@3.5.0",
       "body-parser@1.12.4",
-      "boom@3.2.2",
       "compression@1.4.4",
       "debug@2.2.0",
       "delegates@0.1.0",
@@ -42,7 +41,7 @@
       "iconv-lite@0.4.10",
       "jade@1.10.0",
       "joi@9.0.4",
-      "jsonwebtoken@8.1.0",
+      "jsonwebtoken@7.1.9",
       "jwks-rsa@1.1.1",
       "lodash@3.10.1",
       "lru-cache@2.6.4",
@@ -58,7 +57,7 @@
       "qs@3.1.0",
       "raw-body@2.1.0",
       "read-all-stream@2.1.2",
-      "request@2.85.0",
+      "request@2.87.0",
       "superagent@1.2.0",
       "type-check@0.3.1",
       "webtask-tools",
@@ -79,13 +78,13 @@
     "jwks-rsa": "1.1.1",
     "nconf": "^0.8.4",
     "open": "^0.0.5",
-    "request": "^2.85.0",
+    "request": "^2.87.0",
     "webtask-tools": "^3.2.0",
     "winston": "1.0.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.0.0-beta.46",
-    "auth0-extensions-cli": "1.1.0",
+    "auth0-extensions-cli": "^1.1.2",
     "chai": "^4.1.0",
     "eslint": "^4.3.0",
     "eslint-config-auth0": "^11.0.0",
