--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "auth0@2.8.0",
       "bluebird@3.5.0",
       "body-parser@1.12.4",
+      "boom@3.2.2",
       "compression@1.4.4",
       "debug@2.2.0",
       "delegates@0.1.0",
@@ -39,6 +40,7 @@
       "hapi@13.5.0",
       "hoek@4.1.0",
       "iconv-lite@0.4.10",
+      "inert@4.0.1",
       "jade@1.10.0",
       "joi@9.0.4",
       "jsonwebtoken@7.1.9",
