--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth0-account-link-extension",
-  "version": "2.3.4",
+  "version": "2.4.0",
   "description": "Auth0 Account Link Extension",
   "main": "index.js",
   "engines": {
@@ -22,7 +22,7 @@
     "nodeTarget": "4.2.0",
     "bundleModules": true,
     "externals": [
-      "auth0-extension-hapi-tools@1.2.2",
+      "auth0-extension-hapi-tools@1.3.0",
       "auth0-extension-tools@1.3.1",
       "auth0@2.8.0",
       "bluebird@3.5.0",
@@ -37,7 +37,7 @@
       "express-jwt@3.1.0",
       "express@4.12.4",
       "hapi-auth-jwt2@7.0.1",
-      "hapi@13.5.0",
+      "@auth0/hapi@13.5.1",
       "hoek@4.1.0",
       "iconv-lite@0.4.10",
       "inert@4.0.1",
@@ -68,11 +68,11 @@
     ]
   },
   "dependencies": {
+    "@auth0/hapi": "13.5.1",
     "auth0": "^2.8.0",
-    "auth0-extension-hapi-tools": "1.2.2",
+    "auth0-extension-hapi-tools": "1.3.0",
     "auth0-extension-tools": "1.3.1",
     "boom": "3.2.2",
-    "hapi": "13.5.0",
     "hapi-auth-jwt2": "7.0.1",
     "inert": "4.0.1",
     "joi": "9.0.4",
