--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth0-account-link-extension",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "description": "Auth0 Account Link Extension",
   "main": "index.js",
   "engines": {
@@ -68,33 +68,33 @@
     ]
   },
   "dependencies": {
-    "@auth0/hapi": "13.5.1",
+    "@auth0/hapi": "13.6.0",
     "auth0": "^2.8.0",
     "auth0-extension-hapi-tools": "1.3.1",
-    "auth0-extension-tools": "1.3.1",
+    "auth0-extension-tools": "1.5.0",
     "boom": "3.2.2",
     "hapi-auth-jwt2": "7.0.1",
     "inert": "4.0.1",
     "joi": "9.0.4",
-    "jsonwebtoken": "^8.1.0",
-    "jwks-rsa": "1.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "1.8.1",
     "lodash": "^3.10.1",
-    "nconf": "^0.8.4",
+    "nconf": "^0.10.0",
     "open": "^0.0.5",
-    "request": "^2.81.0",
-    "webtask-tools": "^3.2.0",
+    "request": "^2.88.2",
+    "webtask-tools": "^3.4.1",
     "winston": "1.0.0"
   },
   "devDependencies": {
-    "@babel/runtime": "7.0.0-beta.46",
+    "@babel/runtime": "7.10.5",
     "auth0-extensions-cli": "^1.1.2",
     "chai": "^4.1.0",
-    "eslint": "^4.3.0",
-    "eslint-config-auth0": "^11.0.0",
-    "eslint-config-auth0-base": "^13.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint": "^7.5.0",
+    "eslint-config-auth0": "^11.1.0",
+    "eslint-config-auth0-base": "^13.1.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.4",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-util": "^3.0.8",
