--- a/package.json
+++ b/package.json
@@ -18,6 +18,28 @@
   },
   "author": "Auth0",
   "license": "MIT",
+  "auth0-extension": {
+    "bundleModules": true,
+    "nodeTarget": "12",
+    "externals": [
+      "auth0-extension-hapi-tools@1.3.1",
+      "auth0-extension-tools@1.5.0",
+      "auth0@2.27.1",
+      "boom@3.2.2",
+      "hapi-auth-jwt2@7.0.1",
+      "@auth0/hapi@13.6.0",
+      "inert@4.0.1",
+      "joi@9.0.4",
+      "jsonwebtoken@8.5.1",
+      "jwks-rsa@1.8.1",
+      "lodash@3.10.1",
+      "nconf@0.10.0",
+      "open@0.0.5",
+      "request@2.88.2",
+      "webtask-tools",
+      "winston@1.0.0"
+    ]
+  },
   "dependencies": {
     "@auth0/hapi": "13.6.0",
     "auth0": "^2.27.1",
