--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth0-account-link-extension",
+  "name": "auth0-account-link",
   "version": "2.6.4",
   "description": "Auth0 Account Link Extension",
   "main": "index.js",
@@ -23,7 +23,7 @@
     "bundleModules": true,
     "externals": [
       "auth0-extension-hapi-tools@1.3.1",
-      "auth0-extension-tools@1.3.1",
+      "auth0-extension-tools@1.4.0",
       "auth0@2.8.0",
       "bluebird@3.5.0",
       "body-parser@1.12.4",
@@ -71,7 +71,7 @@
     "@auth0/hapi": "13.5.1",
     "auth0": "^2.8.0",
     "auth0-extension-hapi-tools": "1.3.1",
-    "auth0-extension-tools": "1.3.1",
+    "auth0-extension-tools": "1.4.0",
     "boom": "3.2.2",
     "hapi-auth-jwt2": "7.0.1",
     "inert": "4.0.1",
@@ -86,8 +86,7 @@
     "winston": "1.0.0"
   },
   "devDependencies": {
-    "@babel/runtime": "7.0.0-beta.46",
-    "auth0-extensions-cli": "^1.1.2",
+    "auth0-extensions-cli": "^4.0.4",
     "chai": "^4.1.0",
     "eslint": "^4.3.0",
     "eslint-config-auth0": "^11.0.0",
