--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth0-account-link-extension",
-  "version": "2.6.5",
+  "version": "2.3.0",
   "description": "Auth0 Account Link Extension",
   "main": "index.js",
   "engines": {
@@ -11,10 +11,9 @@
     "test": "nyc --all mocha test --recursive --timeout 5000",
     "test:integration": "mocha integration --recursive --timeout 50000",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
     "serve:dev": "gulp run",
-    "client:build": "minify --clean --output dist/assets/link.$npm_package_version.min.css public/css/link.css && minify --clean --output dist/assets/admin.$npm_package_version.min.css public/css/admin.css",
-    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-account-link-extension.extension.$npm_package_version.js ./build/bundle.js",
+    "client:build": "minify --clean public/css/link.css && minify --clean public/css/admin.css",
+    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-account-link.extension.$npm_package_version.js ./build/bundle.js",
     "build": "yarn run client:build && yarn run extension:build"
   },
   "author": "Auth0",
@@ -23,8 +22,8 @@
     "nodeTarget": "4.2.0",
     "bundleModules": true,
     "externals": [
-      "auth0-extension-hapi-tools@1.3.1",
-      "auth0-extension-tools@1.4.0",
+      "auth0-extension-hapi-tools@1.2.2",
+      "auth0-extension-tools@1.3.1",
       "auth0@2.8.0",
       "bluebird@3.5.0",
       "body-parser@1.12.4",
@@ -38,13 +37,12 @@
       "express-jwt@3.1.0",
       "express@4.12.4",
       "hapi-auth-jwt2@7.0.1",
-      "@auth0/hapi@13.5.1",
+      "hapi@13.5.0",
       "hoek@4.1.0",
       "iconv-lite@0.4.10",
-      "inert@4.0.1",
       "jade@1.10.0",
       "joi@9.0.4",
-      "jsonwebtoken@7.1.9",
+      "jsonwebtoken@8.1.0",
       "jwks-rsa@1.1.1",
       "lodash@3.10.1",
       "lru-cache@2.6.4",
@@ -60,7 +58,7 @@
       "qs@3.1.0",
       "raw-body@2.1.0",
       "read-all-stream@2.1.2",
-      "request@2.81.0",
+      "request@2.85.0",
       "superagent@1.2.0",
       "type-check@0.3.1",
       "webtask-tools",
@@ -69,25 +67,25 @@
     ]
   },
   "dependencies": {
-    "@auth0/hapi": "13.5.1",
     "auth0": "^2.8.0",
-    "auth0-extension-hapi-tools": "1.3.1",
-    "auth0-extension-tools": "1.4.0",
+    "auth0-extension-hapi-tools": "1.2.2",
+    "auth0-extension-tools": "1.3.1",
     "boom": "3.2.2",
+    "hapi": "13.5.0",
     "hapi-auth-jwt2": "7.0.1",
     "inert": "4.0.1",
     "joi": "9.0.4",
     "jsonwebtoken": "^8.1.0",
     "jwks-rsa": "1.1.1",
-    "lodash": "^3.10.1",
     "nconf": "^0.8.4",
     "open": "^0.0.5",
-    "request": "^2.81.0",
+    "request": "^2.85.0",
     "webtask-tools": "^3.2.0",
     "winston": "1.0.0"
   },
   "devDependencies": {
-    "auth0-extensions-cli": "^4.0.4",
+    "@babel/runtime": "7.0.0-beta.46",
+    "auth0-extensions-cli": "1.1.0",
     "chai": "^4.1.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
