--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Auth0 Account Link Extension",
   "main": "index.js",
   "engines": {
-    "node": ">=18"
+    "node": ">=6.9"
   },
   "scripts": {
     "start": "node ./index.js",
@@ -14,20 +14,21 @@
     "lint:fix": "eslint --fix .",
     "serve:dev": "gulp run",
     "client:build": "minify --clean --output dist/assets/link.$npm_package_version.min.css public/css/link.css && minify --clean --output dist/assets/admin.$npm_package_version.min.css public/css/admin.css",
-    "extension:build": "NODE_OPTIONS=--openssl-legacy-provider a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-account-link-extension.extension.$npm_package_version.js ./build/bundle.js",
+    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-account-link-extension.extension.$npm_package_version.js ./build/bundle.js",
     "build": "yarn run client:build && yarn run extension:build"
   },
   "author": "Auth0",
   "license": "MIT",
   "auth0-extension": {
+    "nodeTarget": "4.2.0",
     "bundleModules": true,
     "externals": [
       "auth0-extension-hapi-tools@1.3.1",
-      "auth0-extension-tools@1.5.2",
+      "auth0-extension-tools@1.4.0",
       "auth0@2.8.0",
       "bluebird@3.5.0",
       "body-parser@1.12.4",
-      "@hapi/boom@10.0.1",
+      "boom@3.2.2",
       "compression@1.4.4",
       "debug@2.2.0",
       "delegates@0.1.0",
@@ -36,10 +37,11 @@
       "ejs@2.3.1",
       "express-jwt@3.1.0",
       "express@4.12.4",
-      "hapi-auth-jwt2@10.5.1",
-      "@hapi/hapi@21.3.3",
+      "hapi-auth-jwt2@7.0.1",
+      "@auth0/hapi@13.5.1",
       "hoek@4.1.0",
       "iconv-lite@0.4.10",
+      "inert@4.0.1",
       "jade@1.10.0",
       "joi@9.0.4",
       "jsonwebtoken@7.1.9",
@@ -67,13 +69,13 @@
     ]
   },
   "dependencies": {
-    "@hapi/boom": "10.0.1",
-    "@hapi/hapi": "21.3.3",
-    "@hapi/inert": "7.1.0",
+    "@auth0/hapi": "13.5.1",
     "auth0": "^2.8.0",
     "auth0-extension-hapi-tools": "1.3.1",
-    "auth0-extension-tools": "1.5.2",
-    "hapi-auth-jwt2": "10.5.1",
+    "auth0-extension-tools": "1.4.0",
+    "boom": "3.2.2",
+    "hapi-auth-jwt2": "7.0.1",
+    "inert": "4.0.1",
     "joi": "9.0.4",
     "jsonwebtoken": "^8.1.0",
     "jwks-rsa": "1.1.1",
@@ -81,17 +83,24 @@
     "nconf": "^0.8.4",
     "open": "^0.0.5",
     "request": "^2.81.0",
-    "webtask-tools": "^3.3.0",
+    "webtask-tools": "^3.2.0",
     "winston": "1.0.0"
   },
   "devDependencies": {
     "auth0-extensions-cli": "^4.0.4",
     "chai": "^4.1.0",
+    "eslint": "^4.3.0",
+    "eslint-config-auth0": "^11.0.0",
+    "eslint-config-auth0-base": "^13.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.1.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-util": "^3.0.8",
     "minifier": "^0.8.1",
     "mocha": "^3.5.0",
+    "ngrok": "^2.2.15",
     "nodemon": "^1.11.0",
     "nyc": "^11.1.0",
     "puppeteer": "^0.11.0"
