temporarily run build workflow on dev branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: Build
 
 on:
   push:
-    branches: [ master ]
+    # TODO: remove update_preversion before committing
+    branches: [ master, update_preversion ]
 
 permissions:
   id-token: write
