--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 
 on:
   push:
-    # TODO: remove update_preversion before committing
+    # TODO: remove update_preversion before merging
     branches: [ master, update_preversion ]
 
 permissions:
