--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "auth0-account-link-extension",
-  "version": "2.7.0",
+  "version": "3.0.0",
   "description": "Auth0 Account Link Extension",
   "main": "index.js",
   "engines": {
-    "node": ">=10"
+    "node": ">=22"
   },
   "scripts": {
     "start": "node ./index.js",
@@ -23,9 +23,8 @@
     "nodeTarget": "4.2.0",
     "bundleModules": true,
     "externals": [
-      "auth0-extension-hapi-tools@1.3.1",
-      "auth0-extension-tools@1.4.0",
-      "auth0@2.8.0",
+      "auth0-extension-tools@1.5.2",
+      "auth0@4.9.0",
       "bluebird@3.5.0",
       "body-parser@1.12.4",
       "boom@3.2.2",
@@ -37,16 +36,16 @@
       "ejs@2.3.1",
       "express-jwt@3.1.0",
       "express@4.12.4",
-      "hapi-auth-jwt2@7.0.1",
-      "@auth0/hapi@13.5.1",
+      "hapi-auth-jwt2@10.5.1",
+      "@hapi/hapi@21.3.3",
       "hoek@4.1.0",
       "iconv-lite@0.4.10",
-      "inert@4.0.1",
+      "@hapi/inert@7.1.0",
       "jade@1.10.0",
-      "joi@9.0.4",
-      "jsonwebtoken@7.1.9",
-      "jwks-rsa@1.1.1",
-      "lodash@3.10.1",
+      "@hapi/joi@17.1.1",
+      "jsonwebtoken@9.0.0",
+      "jwks-rsa@3.0.1",
+      "lodash@4.17.21",
       "lru-cache@2.6.4",
       "lru-memoizer@1.10.0",
       "mime-db@1.10.0",
@@ -54,37 +53,40 @@
       "moment@2.10.3",
       "morgan@1.5.3",
       "ms@0.7.1",
-      "nconf@0.8.4",
+      "nconf@0.12.0",
       "node-uuid@1.4.3",
       "open@0.0.5",
       "qs@3.1.0",
       "raw-body@2.1.0",
       "read-all-stream@2.1.2",
-      "request@2.81.0",
+      "request@2.88.2",
       "superagent@1.2.0",
       "type-check@0.3.1",
-      "webtask-tools",
-      "winston@1.0.0",
-      "xml2js@0.4.8"
+      "webtask-tools@3.4.1",
+      "winston@3.10.0",
+      "xml2js@0.4.8",
+      "@hapi/boom@10.0.1",
+      "superagent@8.0.9"
     ]
   },
   "dependencies": {
-    "@auth0/hapi": "13.5.1",
-    "auth0": "^2.8.0",
-    "auth0-extension-hapi-tools": "1.3.1",
-    "auth0-extension-tools": "1.4.0",
-    "boom": "3.2.2",
-    "hapi-auth-jwt2": "7.0.1",
-    "inert": "4.0.1",
-    "joi": "9.0.4",
-    "jsonwebtoken": "^8.1.0",
-    "jwks-rsa": "1.1.1",
-    "lodash": "^3.10.1",
-    "nconf": "^0.8.4",
+    "@hapi/boom": "^10.0.1",
+    "@hapi/hapi": "21.3.3",
+    "@hapi/inert": "^7.1.0",
+    "@hapi/joi": "^17.1.1",
+    "@ngrok/ngrok": "^1.4.1",
+    "auth0": "4.9.0",
+    "auth0-extension-tools": "^1.5.2",
+    "hapi-auth-jwt2": "10.5.1",
+    "jsonwebtoken": "9.0.0",
+    "jwks-rsa": "3.0.1",
+    "lodash": "4.17.21",
+    "nconf": "0.12.0",
     "open": "^0.0.5",
-    "request": "^2.81.0",
-    "webtask-tools": "^3.2.0",
-    "winston": "1.0.0"
+    "request": "2.88.2",
+    "superagent": "8.0.9",
+    "webtask-tools": "^3.4.1",
+    "winston": "3.10.0"
   },
   "devDependencies": {
     "auth0-extensions-cli": "^4.0.4",
@@ -95,14 +97,18 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
-    "gulp": "^3.9.1",
+    "gulp": "4.0.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-util": "^3.0.8",
     "minifier": "^0.8.1",
     "mocha": "^3.5.0",
-    "ngrok": "^2.2.15",
+    "nock": "^14.0.3",
     "nodemon": "^1.11.0",
     "nyc": "^11.1.0",
-    "puppeteer": "^0.11.0"
+    "puppeteer": "^24.2.0",
+    "sinon": "^19.0.2"
+  },
+  "resolutions": {
+    "jsonwebtoken": "9.0.0"
   }
 }
