--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Auth0 Account Link Extension",
   "main": "index.js",
   "engines": {
-    "node": ">=10"
+    "node": ">=18"
   },
   "scripts": {
     "start": "node ./index.js",
@@ -38,12 +38,12 @@
       "express-jwt@3.1.0",
       "express@4.12.4",
       "hapi-auth-jwt2@7.0.1",
-      "@auth0/hapi@13.5.1",
+      "@hapi/hapi@21.3.12",
       "hoek@4.1.0",
       "iconv-lite@0.4.10",
-      "inert@4.0.1",
+      "@hapi/inert@7.0.1",
       "jade@1.10.0",
-      "joi@9.0.4",
+      "@hapi/joi@17.17.1",
       "jsonwebtoken@7.1.9",
       "jwks-rsa@1.1.1",
       "lodash@3.10.1",
@@ -69,18 +69,18 @@
     ]
   },
   "dependencies": {
-    "@auth0/hapi": "13.5.1",
-    "auth0": "^2.8.0",
+    "@hapi/hapi": "^21.3.12",
+    "@hapi/inert": "^7.1.0",
+    "@hapi/joi": "^17.1.1",
+    "auth0": "2.27.1",
     "auth0-extension-hapi-tools": "1.3.1",
     "auth0-extension-tools": "1.4.0",
     "boom": "3.2.2",
-    "hapi-auth-jwt2": "7.0.1",
-    "inert": "4.0.1",
-    "joi": "9.0.4",
-    "jsonwebtoken": "^8.1.0",
+    "hapi-auth-jwt2": "^11.0.0",
+    "jsonwebtoken": "9.0.0",
     "jwks-rsa": "1.1.1",
     "lodash": "^3.10.1",
-    "nconf": "^0.8.4",
+    "nconf": "0.11.4",
     "open": "^0.0.5",
     "request": "^2.81.0",
     "webtask-tools": "^3.2.0",
@@ -95,14 +95,14 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
-    "gulp": "^3.9.1",
+    "gulp": "4.0.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-util": "^3.0.8",
     "minifier": "^0.8.1",
     "mocha": "^3.5.0",
-    "ngrok": "^2.2.15",
+    "ngrok": "^4.3.3",
     "nodemon": "^1.11.0",
     "nyc": "^11.1.0",
-    "puppeteer": "^0.11.0"
+    "puppeteer": "^24.2.0"
   }
 }
