--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "@hapi/inert@7.0.1",
       "jade@1.10.0",
       "@hapi/joi@17.17.1",
-      "jsonwebtoken@7.1.9",
+      "jsonwebtoken@9.0.0",
       "jwks-rsa@1.1.1",
       "lodash@3.10.1",
       "lru-cache@2.6.4",
@@ -72,6 +72,7 @@
     "@hapi/hapi": "^21.3.12",
     "@hapi/inert": "^7.1.0",
     "@hapi/joi": "^17.1.1",
+    "@ngrok/ngrok": "^1.4.1",
     "auth0": "2.27.1",
     "auth0-extension-hapi-tools": "1.3.1",
     "auth0-extension-tools": "1.4.0",
@@ -100,7 +101,6 @@
     "gulp-util": "^3.0.8",
     "minifier": "^0.8.1",
     "mocha": "^3.5.0",
-    "ngrok": "^4.3.3",
     "nodemon": "^1.11.0",
     "nyc": "^11.1.0",
     "puppeteer": "^24.2.0"
