--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@hapi/joi": "^17.1.1",
     "@ngrok/ngrok": "^1.4.1",
     "auth0": "2.27.1",
-    "auth0-extension-hapi-tools": "1.3.1",
+    "auth0-extension-hapi-tools": "^1.3.1",
     "auth0-extension-tools": "^1.5.2",
     "boom": "3.2.2",
     "hapi-auth-jwt2": "^11.0.0",
