--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
       "ejs@2.3.1",
       "express-jwt@3.1.0",
       "express@4.12.4",
-      "hapi-auth-jwt2@7.0.1",
+      "hapi-auth-jwt2@10.5.1",
       "@hapi/hapi@21.3.3",
       "hoek@4.1.0",
       "iconv-lite@0.4.10",
-      "@hapi/inert@7.0.1",
+      "@hapi/inert@7.1.0",
       "jade@1.10.0",
       "@hapi/joi@17.17.1",
       "jsonwebtoken@9.0.0",
@@ -63,7 +63,7 @@
       "request@2.81.0",
       "superagent@1.2.0",
       "type-check@0.3.1",
-      "webtask-tools",
+      "webtask-tools@3.4.1",
       "winston@1.0.0",
       "xml2js@0.4.8"
     ]
@@ -77,14 +77,14 @@
     "auth0-extension-hapi-tools": "^1.3.1",
     "auth0-extension-tools": "^1.5.2",
     "boom": "3.2.2",
-    "hapi-auth-jwt2": "^11.0.0",
+    "hapi-auth-jwt2": "10.5.1",
     "jsonwebtoken": "9.0.0",
     "jwks-rsa": "1.1.1",
     "lodash": "^3.10.1",
     "nconf": "0.11.4",
     "open": "^0.0.5",
     "request": "^2.81.0",
-    "webtask-tools": "^3.2.0",
+    "webtask-tools": "^3.4.1",
     "winston": "1.0.0"
   },
   "devDependencies": {
