--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       "@hapi/joi@17.1.1",
       "jsonwebtoken@9.0.0",
       "jwks-rsa@1.1.1",
-      "lodash@3.10.1",
+      "lodash@4.17.21",
       "lru-cache@2.6.4",
       "lru-memoizer@1.10.0",
       "mime-db@1.10.0",
@@ -80,7 +80,7 @@
     "hapi-auth-jwt2": "10.5.1",
     "jsonwebtoken": "9.0.0",
     "jwks-rsa": "1.1.1",
-    "lodash": "^3.10.1",
+    "lodash": "4.17.21",
     "nconf": "0.11.4",
     "open": "^0.0.5",
     "request": "^2.81.0",
