--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
       "qs@3.1.0",
       "raw-body@2.1.0",
       "read-all-stream@2.1.2",
-      "request@2.81.0",
+      "request@2.88.2",
       "superagent@1.2.0",
       "type-check@0.3.1",
       "webtask-tools@3.4.1",
@@ -83,7 +83,7 @@
     "lodash": "4.17.21",
     "nconf": "0.11.4",
     "open": "^0.0.5",
-    "request": "^2.81.0",
+    "request": "2.88.2",
     "webtask-tools": "^3.4.1",
     "winston": "3.10.0"
   },
