--- a/package.json
+++ b/package.json
@@ -65,10 +65,13 @@
       "type-check@0.3.1",
       "webtask-tools@3.4.1",
       "winston@3.10.0",
-      "xml2js@0.4.8"
+      "xml2js@0.4.8",
+      "@hapi/boom@10.0.1",
+      "superagent@8.0.9"
     ]
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@hapi/hapi": "21.3.3",
     "@hapi/inert": "^7.1.0",
     "@hapi/joi": "^17.1.1",
@@ -84,6 +87,7 @@
     "nconf": "0.11.4",
     "open": "^0.0.5",
     "request": "2.88.2",
+    "superagent": "8.0.9",
     "webtask-tools": "^3.4.1",
     "winston": "3.10.0"
   },
