--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "mocha": "^3.5.0",
     "nodemon": "^1.11.0",
     "nyc": "^11.1.0",
-    "puppeteer": "^24.2.0"
+    "puppeteer": "^24.2.0",
+    "sinon": "^19.0.2"
   }
 }
