--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@@85e6279cec87321a52edac9c87bce653a07cf6c2
+        uses: actions/checkout@85e6279cec87321a52edac9c87bce653a07cf6c2
 
       - uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e
         with:
